Fix middle alignment of rows

--- a/src/App.css
+++ b/src/App.css
@@ -43,8 +43,7 @@ body {
 
 .Row-annotation {
   margin-inline-start: 16px;
-  width: auto;
-  min-width:100px;
+  flex: 1 1 0px;
   overflow: visible;
   font-size:90%;
   text-align: start;
